objects/PROSAgreement__Agreement_EarlyTermination__c.object
<CustomObject>
    <fields>
        <fullName>PROSAgreement__AgreementChangesetId__c</fullName>
        <label>Agreement Changeset Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__AgreementError__c</fullName>
        <label>Agreement Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__AgreementRecord_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement Record</label>
        <referenceTo>PROSAgreement__Agreement__c</referenceTo>
        <relationshipName>PROS_Agreement_Early_Terminations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__AgreementStatus__c</fullName>
        <label>Agreement Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__Agreement_Action_Status__c</fullName>
        <label>Agreement Action Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__ContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>Early_Terminations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__External_Agreement_Id__c</fullName>
        <label>Agreement Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__NewEndDateFieldText__c</fullName>
        <formula>TEXT( PROSAgreement__NewEndDate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New End Date Field Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__NewEndDate__c</fullName>
        <label>New End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__Status__c</fullName>
        <defaultValue>&quot;Draft&quot;</defaultValue>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Presented</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Needs Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>PROS Agreement Early Termination</label>
    <listViews>
        <fullName>PROSAgreement__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Early Termination Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PROS Agreement Early Terminations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>PROSAgreement__DateRestriction</fullName>
        <active>true</active>
        <errorConditionFormula>OR(PROSAgreement__Contract_End_Date__c  &lt;= PROSAgreement__NewEndDate__c , PROSAgreement__NewEndDate__c &lt;= PROSAgreement__Contract_Start_Date__c )</errorConditionFormula>
        <errorDisplayField>PROSAgreement__NewEndDate__c</errorDisplayField>
        <errorMessage>Cannot extend from early termination, new end date must be before contract end date and after contract start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PROSAgreement__Validate_Agreement_Action_Status</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
OR(PROSAgreement__Agreement_Action_Status__c = &quot;&quot;,
LOWER(PROSAgreement__Agreement_Action_Status__c) = &quot;start&quot;,
LOWER(PROSAgreement__Agreement_Action_Status__c) = &quot;success&quot;,
LOWER(PROSAgreement__Agreement_Action_Status__c) = &quot;failure&quot;))</errorConditionFormula>
        <errorDisplayField>PROSAgreement__Agreement_Action_Status__c</errorDisplayField>
        <errorMessage>Agreement Action Status is not valid.
Allowed Action Status: Start, Success and Failure.</errorMessage>
    </validationRules>
</CustomObject>